--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -9,6 +9,50 @@
   publisher={Elsevier}
 }
 
+@article{cook1994equivalence,
+  title={On the equivalence of constrained and compound optimal designs},
+  author={Cook, R Dennis and Wong, Weng Kee},
+  journal={Journal of the American Statistical Association},
+  volume={89},
+  number={426},
+  pages={687--692},
+  year={1994},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{lauter1976optimal,
+  title={Optimal multipurpose designs for regression models},
+  author={L{\"a}uter, E},
+  journal={Mathematische Operationsforschung und Statistik},
+  volume={7},
+  number={1},
+  pages={51--68},
+  year={1976},
+  publisher={Taylor \& Francis}
+}
+
+@article{taylor2013real,
+  title={Real-time individual predictions of prostate cancer recurrence using joint models},
+  author={Taylor, Jeremy MG and Park, Yongseok and Ankerst, Donna P and Proust-Lima, Cecile and Williams, Scott and Kestin, Larry and Bae, Kyoungwha and Pickles, Tom and Sandler, Howard},
+  journal={Biometrics},
+  volume={69},
+  number={1},
+  pages={206--213},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{brown2009assessing,
+  title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric HIV/AIDS},
+  author={Brown, Elizabeth R},
+  journal={The annals of applied statistics},
+  volume={3},
+  number={3},
+  pages={1163},
+  year={2009},
+  publisher={NIH Public Access}
+}
+
 @article{lopez2014optimalcutpoints,
   title={OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests},
   author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Suarez, CC and Sampedro, FG},
