--- a/report/pers_schedule/mainmatter/pers_biopsy_framework.tex
+++ b/report/pers_schedule/mainmatter/pers_biopsy_framework.tex
@@ -68,6 +68,7 @@ L_{k_1, k_2}(T^*_j, u) =
 where $k_1 > 0$, $k_2 > 0$ are constants parameterizing the loss function. The posterior expected loss function $E_g[L_{k_1, k_2}(T^*_j, u)]$ obtains its minimum at $u = \pi_j^{-1}\Big\{\dfrac{k_1}{k_1 + k_2}\Big\}$ \citep{robertBayesianChoice}. The choice of $k_1, k_2$ is equivalent to the choice of $\kappa$. More specifically, $\kappa = \dfrac{k_1}{k_1 + k_2}$.
 
 \subsection{A mixed approach between $E_g[T^*_j]$ and dynamic risk of GR}
+\label{subsec : mixed_approach}
 When the variance $Var_g[T^*_j]$ of $g(T^*_j)$ is small, then $E_g[T^*_j]$ is practically very useful. However when the variance is large, there may not be a clear central tendency of the distribution and $E_g[T^*_j]$ will either overshoot $T^*_j$ or undershoot it by a big margin. In the latter case more biopsies will be required until GR is detected at some time point $T_{j{N_j^b}} >  T^*_j$. The overshooting margin can be measured as an offset $O_j = T_{j{N_j^b}} - T_j^*$. The maximum acceptable $O_j$ in PRIAS is 3 years, which corresponds to the time gap between biopsies of the PRIAS fixed schedule. When $Var_g[T^*_j]$ is large, the proposals based on $E_g[T^*_j]$ can have a large $O_j$. Thus we propose that if the difference between the 0.025 quantile and $E_g[T^*_j]$ is more than 3 years then proposals based on dynamic risk of GR be used instead. We call this approach a mixed approach.
 
 \subsection{Estimation}
@@ -88,20 +89,22 @@ Var_g[T^*_j] &= E_g[{T^*_j}^2] - {E_g[T^*_j]}^2\\
 Since a closed form solution is not available for the variance expression, it is estimated similar to the estimation of $E_g[T^*_j]$. The variance depends both on last biopsy time $t$ and PSA history $\mathcal{Y}_j(s)$. The impact of the observed information on variance is demonstrated in Section \ref{subsec : demo_prias_pers_schedule}.
 
 \subsubsection{Estimation of $\kappa$}
+\label{subsubsec : kappa_estimation}
 For schedules based on dynamic risk of GR, the value of $\kappa$ dictates the biopsy schedule and thus its choice has important consequences. In certain cases it may be chosen on the basis of doctor's advice or the amount of risk that is acceptable to the patient. For e.g. if maximum acceptable risk is 75\% then $\kappa = 0.25$, and correspondingly all $k_1, k_2 \mid k_1=\dfrac{k_2}{3}$ can be used in equation (\ref{eq : loss_dynamic_risk}) to calculate $u$.\\
 
 While a doctor's advice can be invaluable, it is also possible to automate the choice of $\kappa$. We propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints,sokolova2009systematic}, discriminating between cases and controls, is maximized. In PRIAS, cases are patients who experience GR and the rest are controls. However, a patient can be in control group at some time $t_a$ and in the cases at some future time point $t_b > t_a$, and thus time dependent binary classification is more relevant. In joint models, a patient $j$ is predicted to be a case if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$ and a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep{rizopoulosJMbayes}. The time window $\Delta t$ can be either chosen on a clinical basis, or such that uncertainty in estimation of $\pi_j(t + \Delta t \mid t,s)$ is below a certain threshold or it can even be chosen such that $AUC(t, \Delta t, s)$ \citep{rizopoulosJMbayes} is largest. i.e. $\Delta t$ for which the model has the most discriminative capability at time $t$. The binary classification accuracy measures we maximize to select the threshold $\kappa$ are the following (the binary classification measures are functions of $t, \Delta t, s$, however the notation is dropped for readability): 
 
 \begin{itemize}
-\item Accuracy: $ACC = \dfrac{TP + TN}{TP + FP + TN + FN}$, where TP, FP, TN and FN are the number of true positives, false positives, true negatives and false negatives at time point $t$. In this case if $k_1 = TP + TN$ and $k_2 = FP + FN$, then $\argmax{k_1, k_2} ACC$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
+%  \item Accuracy: $ACC = \dfrac{TP + TN}{TP + FP + TN + FN}$, where TP, FP, TN and FN are the number of true positives, false positives, true negatives and false negatives at time point $t$. In this case if $k_1 = TP + TN$ and $k_2 = FP + FN$, then $\argmax{k_1, k_2} ACC$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
 
 \item Youden's index: $J = \text{Sensitivity} + \text{Specificity}- 1$,\\
-where sensitivity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid T^*_j \epsilon (t, t + \Delta t])$ and specificity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) > \kappa \mid T^*_j > t + \Delta t)$ \citep{rizopoulosJMbayes}. In this case if $k_1 = FP \cdot TP - FN \cdot TN$ and $k_2 = (TP+FN)(FP+TN) - k_1$, then $\argmax{k_1, k_2} J$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
+where sensitivity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid T^*_j \epsilon (t, t + \Delta t])$ and specificity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) > \kappa \mid T^*_j > t + \Delta t)$ \citep{rizopoulosJMbayes}. Let $k_1 = FP \cdot TP - FN \cdot TN$ and $k_2 = (TP+FN)(FP+TN) - k_1$, where TP, FP, TN and FN are the number of true positives, false positives, true negatives and false negatives at time point $t$. The optimal $k_1, k_2$ or equivalently the $\kappa$ is obtained from $\argmax{k_1, k_2} J$.
 
 \item F1 Score: $F1 = \dfrac{2TP}{2TP + FP + FN}$. In this case if $k_1 = 2TP$ and $k_2 = FP + FN$, then $\argmax{k_1, k_2} F1$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
 \end{itemize}
 
 \subsection{Algorithm}
+\label{subsec : pers_sched_algorithm}
 The algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. In the algorithm:
 
 \begin{enumerate}
