--- a/report/pers_schedule/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/mainmatter/pers_schedule_prias.tex
@@ -14,17 +14,15 @@ The training data set contains information about 5938 prostate cancer patients w
 m_i(t) &= (\beta_0 + b_{i0}) + \beta_1 (Age-70) + \beta_2 (Age-70)^2\\ 
 &+ \sum_{k=1}^4 \beta_{k+2} B_k(t,\mathcal{K}) + b_{i1} B_7(t, 0.5) + b_{i2} B_8(t, 0.5) \\
 \varepsilon_i(t) & \sim N(0, \sigma^2),\\
-\boldsymbol{b}_i & \sim N(0, \boldsymbol{D})
 \end{aligned}
 \end{equation*}
-
-The evolution of PSA levels over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.5, 1.2, 2.5\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.5 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. The variable Age was median centered to avoid numerical instabilities while estimating the parameters in the model. For the survival sub-model the hazard function we fitted is given by:
+where, the measurement error $\varepsilon_i(t)$ is assumed normally distributed with mean zero and variance $\sigma^2$, and is independent of the random effects $\boldsymbol{b}_i$. The evolution of PSA levels over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.5, 1.2, 2.5\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.5 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. The variable Age was median centered to avoid numerical instabilities while estimating the parameters in the model. For the survival sub-model the hazard function we fitted is given by:
 
 \begin{equation}
 \label{eq : hazard_prias}
 h_i(t) = h_0(t) \exp[\gamma_1 (Age-70)  + \gamma_2 (Age-70)^2  \alpha_1 m_i(t) + \alpha_2 m'_i(t)]
 \end{equation}
-where, $\alpha_1$ and $\alpha_2$ are measures of strength of association between hazard of GR and PSA value $m_i(t)$ and PSA velocity $m'_i(t)$, respectively. $h_0(t)$ is the baseline hazard at time t, and is modeled flexibly using P-splines\citep{eilers1996flexible}. Lastly, to fit the joint model we use the R package JMbayes \cite{rizopoulosJMbayes}, which uses a Bayesian approach for parameter estimation.
+where, $\alpha_1$ and $\alpha_2$ are measures of strength of association between hazard of GR and PSA value $m_i(t)$ and PSA velocity $m'_i(t)$, respectively. As mentioned earlier, in PRIAS study PSA-DT is used to decide the schedule of biopsies. However PSA-DT is computed using observed PSA values, and thus interval censoring observed in PRIAS is independent and non informative of underlying health of the patient. Lastly, to fit the joint model we use the R package JMbayes \cite{rizopoulosJMbayes}, which uses a Bayesian approach for parameter estimation.
 
 \subsubsection{Parameter Estimates}
 \label{subsec : param_estimates_jm_fit_prias}
@@ -78,7 +76,7 @@ Slope: $\log_2 PSA$           & 2.407 & 0.319 & 1.791 & 3.069 & \textless0.000 \
 \label{subsec : demo_prias_pers_sc}
 In this section, we demonstrate how the personalized scheduling algorithm adapts the time of performing a biopsy according to the PSA history and results from repeat biopsies. The 3 patients we have chosen for the demonstration data set are part of PRIAS program and they have had their repeat biopsies already. Hence a full scale comparison between PRIAS biopsy schedule and personalized scheduling algorithm's biopsy schedule is not possible.\\
 
-The first patient of interest is patient nr. 3174 who was inducted in the PRIAS program at the age of 74 years. Between the last follow up and time of induction there was no repeat biopsy performed for this patient. Hence the predictive distribution $g(T^*_j)$  for this patient depends only on the PSA measurements. For this patient, the evolution of PSA, time of last biopsy and proposed times of biopsies are shown in Figure \ref{fig : prias_demo_pid_3174}. It can be seen that the PSA remains stable for the first 2 years of follow ups, but increases rapidly after that for the next 2 years of follow up. Since the hazard of GR depends on PSA velocity (Table\ref{tab : PSA_survival}), the schedule of biopsy based on personalized scheduling algorithm (Section \ref{fig : sched_algorithm}), adjust the times of biopsy according to the steep rise in PSA profile. At 2 years the expected and median time of GR are 12.5 years and 15.2 years respectively, whereas at 4 years, they are 5.3 and 4 years respectively. It is important to note that the estimates are year 2 are not as useful as the estimates at year 4, because the $Var_g[T^*_j]$ is considerably lower at year 4, as shown in Figure \ref{fig : variance_pred_dist_3174}.\\
+The first patient of interest is patient nr. 3174 who was inducted in the PRIAS program at the age of 74 years. Between the last follow up and time of induction there was no repeat biopsy performed for this patient. Hence the predictive distribution $g(T^*_j)$  for this patient depends only on the PSA measurements. For this patient, the evolution of PSA, time of last biopsy and proposed times of biopsies are shown in Figure \ref{fig : prias_demo_pid_3174}. It can be seen that the PSA remains stable for the first 2 years of follow ups, but increases rapidly after that for the next 2 years of follow up. Since the hazard of GR depends on PSA velocity (Table\ref{tab : PSA_survival}), the schedule of biopsy based on personalized scheduling algorithm (Section \ref{fig : sched_algorithm}), adjust the times of biopsy according to the steep rise in PSA profile. At 2 years the expected and median time of GR are 12.5 years and 15.2 years respectively, whereas at 4 years, they are 5.3 and 4 years respectively.\\
 
 \begin{figure}[!htb]
 \centering
@@ -87,7 +85,25 @@ The first patient of interest is patient nr. 3174 who was inducted in the PRIAS 
 \caption{\label{fig : prias_demo_pid_3174} Proposed biopsy times for patient 3174 from PRIAS.}
 \end{figure}
 
-The second patient of interest is patient nr. 911. Figure \ref{fig : prias_demo_pid_911} shows the evolution of PSA, time of last biopsy and proposed biopsy times for this patient. Firstly, it can be seen that at between year 1.5 and year 2, the PSA rises sharply, and accordingly the personalized schedules based on expected time of GR preponed the proposed biopsy time from 14.2 years to 13.8 years. The change in median time of GR is trivial. The second observation is that between year 2 and year 3 the PSA decreases sharply and accordingly, the proposed biopsy times are postponed. More specifically the median time of GR increased from 15.2 years at year 2 to 17 years at year 3. Whereas the expected time of GR increased from 13.8 years to 16.6 years. It can also be seen that PSA remains stable up to to year 4. Lastly, because no GR is found at the repeat biopsy performed at 4.1 years, this further leads to postponing of the biopsy times, which become 18.7 and 19.9 for expected time of GR and median time of GR respectively.\\
+It is important to note that for patient nr. 3174, a biopsy scheduled using $E_g[T^*_j]$ at year 2 is not as useful as a biopsy scheduled using the same method at year 4. This because $Var_g[T^*_j]$ is considerably lower at year 4 as shown in Figure \ref{fig : variance_pred_dist_3174}. The variance doesn't depend much on number of PSA measurements, but rather on the PSA values. In the case at hand the variance drops quickly when PSA measurements increase sharply, which corresponds to PSA velocity $m'_i(t)$ being a strong predictor of the hazard of GR (Table \ref{tab : PSA_survival}).\\
+
+\begin{figure}[!htb]
+    \centering
+    \captionsetup{justification=centering}
+     \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{images/variance/variance_pred_dist_3174.png}
+        \caption{Variance of the predictive distribution $g(T^*_j)$ over a period of 4 years for patient 3174. Blue vertical lines indicate biopsies.}
+        \label{fig : variance_pred_dist_3174}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{images/variance/variance_pred_dist_911.png}
+        \caption{Variance of the predictive distribution $g(T^*_j)$ over a period of 5 years for patient 911. Blue vertical lines indicate biopsies.}
+        \label{fig : variance_pred_dist_911}
+    \end{subfigure}      
+    \caption{Variance of the predictive distribution $g(T^*_j)$}\label{fig : variance_pred_dist}
+\end{figure}
+
+The second patient of interest is patient nr. 911. Figure \ref{fig : prias_demo_pid_911} shows the evolution of PSA, time of last biopsy and proposed biopsy times for this patient. Firstly, it can be seen that at between year 1.5 and year 2, the PSA rises sharply, and accordingly the personalized schedules based on expected time of GR preponed the proposed biopsy time from 14.2 years to 13.8 years. The change in median time of GR is trivial. The second observation is that between year 2 and year 3 the PSA decreases sharply and accordingly, the proposed biopsy times are postponed. More specifically the median time of GR increased from 15.2 years at year 2 to 17 years at year 3. Whereas the expected time of GR increased from 13.8 years to 16.6 years. It can also be seen that PSA remains stable up to to year 4. Lastly, because no GR is found at the repeat biopsy performed at 4.1 years, this further leads to postponing of the biopsy times, which become 18.7 and 19.9 for expected time of GR and median time of GR respectively. For patient nr. 911 the biopsies scheduled using $E_g[T^*_j]$ at year 4.1 are expected to be very close to the true GR time of the patient. This because the variance $Var_g[T^*_j]$ is quite low at year 4 as shown in Figure \ref{fig : variance_pred_dist_911}. From the figure it is also evident that the variance decreases considerably each time information about $T^*_j$ from a repeat biopsy is available.\\
 
 \begin{figure}[!htb]
 \centering
